force-app/main/default/objects/CARE_Application__c/CARE_Application__c.object-meta.xml
<CustomObject>
    <label>CARE Application</label>
    <nameField>
        <displayFormat>CT-{0000000000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CARE Application</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>