force-app/main/default/objects/CARE_Application__c/fields/ACCT_TRANSFER_DATE__c.field-meta.xml
<CustomField>
    <fullName>ACCT_TRANSFER_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ACCT TRANSFER DATE</label>
    <type>Date</type>
</CustomField>