force-app/main/default/objects/CARE_Application__c/fields/ACCT_TRANSFER_RSN__c.field-meta.xml
<CustomField>
    <fullName>ACCT_TRANSFER_RSN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ACTION REASON</label>
    <length>200</length>
    <type>Text</type>
</CustomField>