force-app/main/default/objects/CARE_Application__c/fields/AGREED_TO_ESA__c.field-meta.xml
<CustomField>
    <fullName>AGREED_TO_ESA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AGREED TO ESA</label>
    <type>Checkbox</type>
</CustomField>