force-app/main/default/objects/CARE_Application__c/fields/ANNUAL_HOUSEHOLD_INCOME__c.field-meta.xml
<CustomField>
    <fullName>ANNUAL_HOUSEHOLD_INCOME__c</fullName>
    <label>ANNUAL HOUSEHOLD INCOME</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>