force-app/main/default/objects/CARE_Application__c/fields/APPCODE__c.field-meta.xml
<CustomField>
    <fullName>APPCODE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>APPCODE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>