force-app/main/default/objects/CARE_Application__c/fields/APPLICANT_NAME__c.field-meta.xml
<CustomField>
    <fullName>APPLICANT_NAME__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>APPLICANT NAME</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>