force-app/main/default/objects/CARE_Application__c/fields/APPLICATION_EXTERNAL_ID__c.field-meta.xml
<CustomField>
    <fullName>APPLICATION_EXTERNAL_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>APPLICATION EXTERNAL ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>