force-app/main/default/objects/CARE_Application__c/fields/APPLICATION_FORM__c.field-meta.xml
<CustomField>
    <fullName>APPLICATION_FORM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>APPLICATION FORM</label>
    <type>Checkbox</type>
</CustomField>