force-app/main/default/objects/CARE_Application__c/fields/APPLICATION_STATUS__c.field-meta.xml
<CustomField>
    <fullName>APPLICATION_STATUS__c</fullName>
    <inlineHelpText>Status of Enrollment</inlineHelpText>
    <label>APPLICATION STATUS</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In-Progress</fullName>
            </value>
            <value>
                <fullName>Decision Made</fullName>
            </value>
            <value>
                <fullName>Staged for CC&amp;B</fullName>
            </value>
            <value>
                <fullName>Sent to CC&amp;B</fullName>
            </value>
            <value>
                <fullName>Reconciled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>