force-app/main/default/objects/CARE_Application__c/fields/APPLICATION_TYPE__c.field-meta.xml
<CustomField>
    <fullName>APPLICATION_TYPE__c</fullName>
    <label>APPLICATION TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enrollment</fullName>
            </value>
            <value>
                <fullName>PEV</fullName>
            </value>
            <value>
                <fullName>Notice</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>