force-app/main/default/objects/CARE_Application__c/fields/BROCHURE__c.field-meta.xml
<CustomField>
    <fullName>BROCHURE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BROCHURE</label>
    <type>Checkbox</type>
</CustomField>