force-app/main/default/objects/CARE_Application__c/fields/BUREAU_INDIAN_AFFAIRS__c.field-meta.xml
<CustomField>
    <fullName>BUREAU_INDIAN_AFFAIRS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BUREAU INDIAN AFFAIRS</label>
    <type>Checkbox</type>
</CustomField>