force-app/main/default/objects/CARE_Application__c/fields/CALFRESH_SNAP__c.field-meta.xml
<CustomField>
    <fullName>CALFRESH_SNAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CALFRESH SNAP</label>
    <type>Checkbox</type>
</CustomField>