force-app/main/default/objects/CARE_Application__c/fields/CALWORKS_TANF__c.field-meta.xml
<CustomField>
    <fullName>CALWORKS_TANF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CALWORKS TANF</label>
    <type>Checkbox</type>
</CustomField>