force-app/main/default/objects/CARE_Application__c/fields/CARE1_RECORD_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>CARE1_RECORD_NUMBER__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CARE1 RECORD NUMBER</label>
    <type>Date</type>
</CustomField>