force-app/main/default/objects/CARE_Application__c/fields/CARE_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>CARE_Account_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Account number of customer enrolled</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CARE Application</relationshipLabel>
    <relationshipName>CARE_Application</relationshipName>
    <type>Lookup</type>
</CustomField>