force-app/main/default/objects/CARE_Application__c/fields/CARE_Active_Customer__c.field-meta.xml
<CustomField>
    <fullName>CARE_Active_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Customer is active or not</inlineHelpText>
    <label>Active Customer</label>
    <type>Checkbox</type>
</CustomField>