force-app/main/default/objects/CARE_Application__c/fields/CARE_Alternate_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>CARE_Alternate_Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Customer&apos;s alternate Phone number</inlineHelpText>
    <label>Alternate Phone Number</label>
    <type>Phone</type>
</CustomField>