force-app/main/default/objects/CARE_Application__c/fields/CARE_Alternate_Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>CARE_Alternate_Phone_Type__c</fullName>
    <label>CARE Alternate Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>