force-app/main/default/objects/CARE_Application__c/fields/CARE_CI_CC__c.field-meta.xml
<CustomField>
    <fullName>CARE_CI_CC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CARE CI CC</label>
    <referenceTo>CARE_CI_CC__c</referenceTo>
    <relationshipLabel>CARE Application</relationshipLabel>
    <relationshipName>CARE_Application</relationshipName>
    <type>Lookup</type>
</CustomField>