force-app/main/default/objects/CARE_Application__c/fields/CARE_City__c.field-meta.xml
<CustomField>
    <fullName>CARE_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>City name</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>