force-app/main/default/objects/CARE_Application__c/fields/CARE_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>CARE_Customer_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Name of Customer</inlineHelpText>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>