force-app/main/default/objects/CARE_Application__c/fields/CARE_Electric_SA_ID__c.field-meta.xml
<CustomField>
    <fullName>CARE_Electric_SA_ID__c</fullName>
    <formula>CARE_Account_ID__r.elec_SAID_EI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Electric SA ID from Account</inlineHelpText>
    <label>Electric SA ID</label>
    <type>Text</type>
</CustomField>