force-app/main/default/objects/CARE_Application__c/fields/CARE_Email__c.field-meta.xml
<CustomField>
    <fullName>CARE_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Email ID of customer</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>