force-app/main/default/objects/CARE_Application__c/fields/CARE_Enrolled_Tenant_only__c.field-meta.xml
<CustomField>
    <fullName>CARE_Enrolled_Tenant_only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enrolled Tenant Only</label>
    <type>Checkbox</type>
</CustomField>