force-app/main/default/objects/CARE_Application__c/fields/CARE_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>CARE_ExternalID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>ExternalID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>