force-app/main/default/objects/CARE_Application__c/fields/CARE_MFHC__c.field-meta.xml
<CustomField>
    <fullName>CARE_MFHC__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Migrant Farm worker Housing Center</inlineHelpText>
    <label>MFHC</label>
    <type>Checkbox</type>
</CustomField>