force-app/main/default/objects/CARE_Application__c/fields/CARE_Number_of_Adults_in_Household__c.field-meta.xml
<CustomField>
    <fullName>CARE_Number_of_Adults_in_Household__c</fullName>
    <inlineHelpText>No of Adults</inlineHelpText>
    <label>Number of Adults in Household</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>