force-app/main/default/objects/CARE_Application__c/fields/CARE_Number_of_Children_in_Household__c.field-meta.xml
<CustomField>
    <fullName>CARE_Number_of_Children_in_Household__c</fullName>
    <inlineHelpText>No of Children</inlineHelpText>
    <label>Number of Children in Household</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>