force-app/main/default/objects/CARE_Application__c/fields/CARE_Person_ID__c.field-meta.xml
<CustomField>
    <fullName>CARE_Person_ID__c</fullName>
    <formula>CARE_Account_ID__r.F_Person_ID_EI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Person Id from Account</inlineHelpText>
    <label>Person ID</label>
    <type>Text</type>
</CustomField>