force-app/main/default/objects/CARE_Application__c/fields/CARE_Preferred_Method_of_Communication__c.field-meta.xml
<CustomField>
    <fullName>CARE_Preferred_Method_of_Communication__c</fullName>
    <inlineHelpText>Preferred communication method</inlineHelpText>
    <label>Preferred Method of Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mail (billing address),</fullName>
            </value>
            <value>
                <fullName>Email(By entering your email address, you are authorizing PG&amp;E to send you information from time to time regarding your PG&amp;E utility service and PG&amp;E programs and services that may be available to you.)</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Text(Note: Message and data rates may apply.)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>