force-app/main/default/objects/CARE_Application__c/fields/CARE_Preferred_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>CARE_Preferred_Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Customer&apos;s preferred Phone number</inlineHelpText>
    <label>Preferred Phone Number</label>
    <type>Phone</type>
</CustomField>