force-app/main/default/objects/CARE_Application__c/fields/CARE_Probation__c.field-meta.xml
<CustomField>
    <fullName>CARE_Probation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Probation</label>
    <type>Checkbox</type>
</CustomField>