force-app/main/default/objects/CARE_Application__c/fields/CARE_Public_Assistance_Programs__c.field-meta.xml
<CustomField>
    <fullName>CARE_Public_Assistance_Programs__c</fullName>
    <label>Public Assistance Programs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low Income Home Energy Assistance Program (LIHEAP)</fullName>
            </value>
            <value>
                <fullName>Women Infants and Children (WIC)</fullName>
            </value>
            <value>
                <fullName>CalFresh/SNAP(Food Stamps)</fullName>
            </value>
            <value>
                <fullName>CalWorks(TANF) or Tribal TANF</fullName>
            </value>
            <value>
                <fullName>Head Start Income Eligible (Tribal Only)</fullName>
            </value>
            <value>
                <fullName>Supplemental Security Income(SSI)</fullName>
            </value>
            <value>
                <fullName>Medi-Cal for Families(Healthy Families A&amp;B)</fullName>
            </value>
            <value>
                <fullName>National School Lunch Program(NSLP)</fullName>
            </value>
            <value>
                <fullName>Bureau of Indian Affairs General Assistance</fullName>
            </value>
            <value>
                <fullName>Medicaid/Medi-Cal (under age 65)</fullName>
            </value>
            <value>
                <fullName>Medicaid/Medi-Cal (age 65 and over)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>