force-app/main/default/objects/CARE_Application__c/fields/CARE_Service_Address__c.field-meta.xml
<CustomField>
    <fullName>CARE_Service_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>