force-app/main/default/objects/CARE_Application__c/fields/CARE_Space__c.field-meta.xml
<CustomField>
    <fullName>CARE_Space__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Space name</inlineHelpText>
    <label>Space</label>
    <length>255</length>
    <type>Text</type>
</CustomField>