force-app/main/default/objects/CARE_Application__c/fields/CARE_Space_and_Location__c.field-meta.xml
<CustomField>
    <fullName>CARE_Space_and_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Space and Location</label>
    <referenceTo>EI_Space_Location__c</referenceTo>
    <relationshipLabel>CARE Application</relationshipLabel>
    <relationshipName>CARE_Application</relationshipName>
    <type>Lookup</type>
</CustomField>