force-app/main/default/objects/CARE_Application__c/fields/CARE_Street__c.field-meta.xml
<CustomField>
    <fullName>CARE_Street__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Street name</inlineHelpText>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>