force-app/main/default/objects/CARE_Application__c/fields/CARE_Zip__c.field-meta.xml
<CustomField>
    <fullName>CARE_Zip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>