force-app/main/default/objects/CARE_Application__c/fields/CASH_OTHER_INCOME__c.field-meta.xml
<CustomField>
    <fullName>CASH_OTHER_INCOME__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CASH OTHER INCOME</label>
    <type>Checkbox</type>
</CustomField>