force-app/main/default/objects/CARE_Application__c/fields/CC_BATCH_DATE__c.field-meta.xml
<CustomField>
    <fullName>CC_BATCH_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CC BATCH DATE</label>
    <type>Date</type>
</CustomField>