force-app/main/default/objects/CARE_Application__c/fields/CC_CHAR_REQ__c.field-meta.xml
<CustomField>
    <fullName>CC_CHAR_REQ__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CC CHAR REQ</label>
    <length>2</length>
    <type>Text</type>
</CustomField>