force-app/main/default/objects/CARE_Application__c/fields/CCB_CONTACT_COMMENT2__c.field-meta.xml
<CustomField>
    <fullName>CCB_CONTACT_COMMENT2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CCB CONTACT COMMENT2</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>