force-app/main/default/objects/CARE_Application__c/fields/CCB_CONTACT_DESC2__c.field-meta.xml
<CustomField>
    <fullName>CCB_CONTACT_DESC2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CCB CONTACT DESC2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>