force-app/main/default/objects/CARE_Application__c/fields/CCB_CONTACT_DESC__c.field-meta.xml
<CustomField>
    <fullName>CCB_CONTACT_DESC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CCB CONTACT DESC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>