force-app/main/default/objects/CARE_Application__c/fields/CCB_Contact_Type_No2__c.field-meta.xml
<CustomField>
    <fullName>CCB_Contact_Type_No2__c</fullName>
    <description>The care type no for the contact code 2 selected</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CCB Contact Type No2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>