force-app/main/default/objects/CARE_Application__c/fields/CCB_SA_DATE__c.field-meta.xml
<CustomField>
    <fullName>CCB_SA_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CCB SA DATE</label>
    <type>Date</type>
</CustomField>