force-app/main/default/objects/CARE_Application__c/fields/CCB_UNIT_DATE__c.field-meta.xml
<CustomField>
    <fullName>CCB_UNIT_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CCB UNIT DATE</label>
    <type>Date</type>
</CustomField>