force-app/main/default/objects/CARE_Application__c/fields/COMMENTS__c.field-meta.xml
<CustomField>
    <fullName>COMMENTS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>COMMENTS</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>