force-app/main/default/objects/CARE_Application__c/fields/CUSTOMER_TYPE__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER_TYPE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CUSTOMER TYPE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>