force-app/main/default/objects/CARE_Application__c/fields/DATA_ENTRY_COMPLETE__c.field-meta.xml
<CustomField>
    <fullName>DATA_ENTRY_COMPLETE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DATA ENTRY COMPLETE</label>
    <type>Checkbox</type>
</CustomField>