force-app/main/default/objects/CARE_Application__c/fields/DATA_ENTRY_COMPLETE_DATE__c.field-meta.xml
<CustomField>
    <fullName>DATA_ENTRY_COMPLETE_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DATA ENTRY COMPLETE DATE</label>
    <type>Date</type>
</CustomField>