force-app/main/default/objects/CARE_Application__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>CARE_Discount__c</inlineHelpText>
    <label>Discount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>