force-app/main/default/objects/CARE_Application__c/fields/DOC_RECEIVED_DATE__c.field-meta.xml
<CustomField>
    <fullName>DOC_RECEIVED_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DOC RECEIVED DATE</label>
    <type>Date</type>
</CustomField>