force-app/main/default/objects/CARE_Application__c/fields/DOC_TYPE__c.field-meta.xml
<CustomField>
    <fullName>DOC_TYPE__c</fullName>
    <label>DOC TYPE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract with Office of Migrant Services</fullName>
            </value>
            <value>
                <fullName>Federal 501(c)3</fullName>
            </value>
            <value>
                <fullName>Invalid Document</fullName>
            </value>
            <value>
                <fullName>Not Provided</fullName>
            </value>
            <value>
                <fullName>Permit by DHCD</fullName>
            </value>
            <value>
                <fullName>State Tax Exemption</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>