force-app/main/default/objects/CARE_Application__c/fields/DROP_SOURCE__c.field-meta.xml
<CustomField>
    <fullName>DROP_SOURCE__c</fullName>
    <label>DROP SOURCE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Called - In</fullName>
            </value>
            <value>
                <fullName>CC&amp;B Case</fullName>
            </value>
            <value>
                <fullName>Emailed</fullName>
            </value>
            <value>
                <fullName>Faxed/Letter Mailed - In</fullName>
            </value>
            <value>
                <fullName>Space Occupied</fullName>
            </value>
            <value>
                <fullName>SF Case</fullName>
            </value>
            <value>
                <fullName>CSR</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>