force-app/main/default/objects/CARE_Application__c/fields/E_RETRO_START_DATE__c.field-meta.xml
<CustomField>
    <fullName>E_RETRO_START_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>E RETRO START DATE</label>
    <type>Date</type>
</CustomField>