force-app/main/default/objects/CARE_Application__c/fields/EMAIL_ADDRESS__c.field-meta.xml
<CustomField>
    <fullName>EMAIL_ADDRESS__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>EMAIL ADDRESS</label>
    <length>254</length>
    <type>Text</type>
</CustomField>