force-app/main/default/objects/CARE_Application__c/fields/ENROLLMENT_CODE__c.field-meta.xml
<CustomField>
    <fullName>ENROLLMENT_CODE__c</fullName>
    <label>ENROLLMENT CODE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>