force-app/main/default/objects/CARE_Application__c/fields/ENROLLMENT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>ENROLLMENT_TYPE__c</fullName>
    <label>ENROLLMENT TYPE</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ENROLLMENT</fullName>
            </value>
            <value>
                <fullName>PEV</fullName>
            </value>
            <value>
                <fullName>PEV Receipt</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>