force-app/main/default/objects/CARE_Application__c/fields/ESA_SENT_DATE__c.field-meta.xml
<CustomField>
    <fullName>ESA_SENT_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ESA SENT DATE</label>
    <type>Date</type>
</CustomField>