force-app/main/default/objects/CARE_Application__c/fields/ESA_STATUS_CODE__c.field-meta.xml
<CustomField>
    <fullName>ESA_STATUS_CODE__c</fullName>
    <label>ESA STATUS CODE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Dropped</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>