force-app/main/default/objects/CARE_Application__c/fields/FACILITY__c.field-meta.xml
<CustomField>
    <fullName>FACILITY__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FACILITY</label>
    <referenceTo>CARE_Facility__c</referenceTo>
    <relationshipLabel>CARE Application</relationshipLabel>
    <relationshipName>CARE_Application</relationshipName>
    <type>Lookup</type>
</CustomField>