force-app/main/default/objects/CARE_Application__c/fields/FEDERAL_501_FORM__c.field-meta.xml
<CustomField>
    <fullName>FEDERAL_501_FORM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FEDERAL 501 FORM</label>
    <type>Checkbox</type>
</CustomField>