force-app/main/default/objects/CARE_Application__c/fields/FEDERAL_501_FORM_NAME_MATCH__c.field-meta.xml
<CustomField>
    <fullName>FEDERAL_501_FORM_NAME_MATCH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FEDERAL 501 FORM NAME MATCH</label>
    <type>Checkbox</type>
</CustomField>