force-app/main/default/objects/CARE_Application__c/fields/FIXED_INCOME__c.field-meta.xml
<CustomField>
    <fullName>FIXED_INCOME__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FIXED INCOME</label>
    <type>Checkbox</type>
</CustomField>