force-app/main/default/objects/CARE_Application__c/fields/FORM_CODE__c.field-meta.xml
<CustomField>
    <fullName>FORM_CODE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FORM CODE</label>
    <length>22</length>
    <type>Text</type>
</CustomField>