force-app/main/default/objects/CARE_Application__c/fields/G_RETRO_START_DATE__c.field-meta.xml
<CustomField>
    <fullName>G_RETRO_START_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>G RETRO START DATE</label>
    <type>Date</type>
</CustomField>