force-app/main/default/objects/CARE_Application__c/fields/GAS_RS_CD__c.field-meta.xml
<CustomField>
    <fullName>GAS_RS_CD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GAS RS CD</label>
    <length>8</length>
    <type>Text</type>
</CustomField>