force-app/main/default/objects/CARE_Application__c/fields/GUARDIAN_ATTORNEY__c.field-meta.xml
<CustomField>
    <fullName>GUARDIAN_ATTORNEY__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GUARDIAN ATTORNEY</label>
    <type>Checkbox</type>
</CustomField>