force-app/main/default/objects/CARE_Application__c/fields/HEAD_START_INCOME__c.field-meta.xml
<CustomField>
    <fullName>HEAD_START_INCOME__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HEAD START INCOME</label>
    <type>Checkbox</type>
</CustomField>