force-app/main/default/objects/CARE_Application__c/fields/HEALTHY_FAMILIES__c.field-meta.xml
<CustomField>
    <fullName>HEALTHY_FAMILIES__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HEALTHY FAMILIES</label>
    <type>Checkbox</type>
</CustomField>