force-app/main/default/objects/CARE_Application__c/fields/HOME_PHONE_NO__c.field-meta.xml
<CustomField>
    <fullName>HOME_PHONE_NO__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HOME PHONE NO</label>
    <length>30</length>
    <type>Text</type>
</CustomField>