force-app/main/default/objects/CARE_Application__c/fields/HOUSE_QUALIFY__c.field-meta.xml
<CustomField>
    <fullName>HOUSE_QUALIFY__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HOUSE QUALIFY</label>
    <type>Checkbox</type>
</CustomField>