force-app/main/default/objects/CARE_Application__c/fields/HOUSING_DEP_PERMIT__c.field-meta.xml
<CustomField>
    <fullName>HOUSING_DEP_PERMIT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HOUSING DEP PERMIT</label>
    <type>Checkbox</type>
</CustomField>